--- a/memo/app/src/main/res/layout/activity_main.xml
+++ b/memo/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/inputEditText"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:textSize="18sp"
         android:layout_margin="16dp"/>
 
     <Spinner
@@ -25,6 +28,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/categorySpinner"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:textSize="18sp"
         android:layout_margin="16dp"/>
 
     <Spinner
@@ -32,6 +38,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fromSpinner"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:textSize="18sp"
         android:layout_margin="16dp"/>
 
     <Button
