--- a/calculator/app/src/main/res/layout/activity_main.xml
+++ b/calculator/app/src/main/res/layout/activity_main.xml
@@ -9,72 +9,27 @@
         android:id="@+id/resultTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/buttonEquals"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="Result: "
-        />
+        android:text="Result:"
+        android:textSize="24sp" />
+
+
     <!-- Button Grid -->
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/resultTextView"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:columnCount="4"
         android:rowCount="5"
         android:layout_marginTop="16dp"
         android:padding="8dp">
 
         <!-- Row 1 -->
-        <Button
-            android:layout_columnSpan="2"
-            android:id="@+id/button7"
-            android:text="7" />
-        <Button
-            android:layout_column="2"
-            android:id="@+id/button8"
-            android:text="8" />
-        <Button
-            android:layout_column="3"
-            android:id="@+id/button9"
-            android:text="9" />
 
-        <!-- Row 2 -->
-        <Button
-            android:id="@+id/button4"
-            android:text="4" />
-        <Button
-            android:id="@+id/button5"
-            android:text="5" />
-        <Button
-            android:id="@+id/button6"
-            android:text="6" />
-
-        <!-- Row 3 -->
-        <Button
-            android:id="@+id/button1"
-            android:text="1" />
-        <Button
-            android:id="@+id/button2"
-            android:text="2" />
-        <Button
-            android:id="@+id/button3"
-            android:text="3" />
-
-        <!-- Row 4 -->
-        <Button
-            android:layout_rowSpan="2"
-            android:id="@+id/button0"
-            android:text="0" />
-        <Button
-            android:id="@+id/buttonEquals"
-            android:text="=" />
         <Button
             android:id="@+id/buttonPlus"
             android:text="+" />
-
-        <Button
-            android:id="@+id/buttonReset"
-            android:text="C" />
 
         <Button
             android:id="@+id/buttonSubtract"
@@ -88,11 +43,68 @@
             android:id="@+id/buttonDivide"
             android:text="/" />
 
+        <!-- Row 2 -->
+        <Button
+            android:id="@+id/button7"
+            android:text="7" />
+        <Button
+            android:id="@+id/button8"
+            android:text="8" />
+        <Button
+            android:id="@+id/button9"
+            android:text="9" />
+
+        <Button
+            android:id="@+id/buttonModulus"
+            android:text="%" />
+
+        <!-- Row 3 -->
+        <Button
+            android:id="@+id/button4"
+            android:text="4" />
+        <Button
+            android:id="@+id/button5"
+            android:text="5" />
+        <Button
+            android:id="@+id/button6"
+            android:text="6" />
+
+        <Button
+            android:id="@+id/buttonFactorial"
+            android:text="!" />
+
+
+        <!-- Row 4 -->
+        <Button
+            android:id="@+id/button1"
+            android:text="1" />
+        <Button
+            android:id="@+id/button2"
+            android:text="2" />
+        <Button
+            android:id="@+id/button3"
+            android:text="3" />
+
+        <Button
+            android:id="@+id/buttonInverse"
+            android:text="1/x" />
+
+        <!-- Row 5 -->
+        <Button
+            android:id="@+id/buttonReset"
+            android:text="C" />
+
+        <Button
+            android:id="@+id/button0"
+            android:text="0" />
+
+        <Button
+            android:id="@+id/buttonEquals"
+            android:text="=" />
+
+        <Button
+            android:id="@+id/buttonTenPowerX"
+            android:text="10^x" />
+
     </GridLayout>
-
 </LinearLayout>
-
-
-
-
-
